// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Listing item component render a listing item component 1`] = `
<ListingItem
  item={
    Object {
      "title": "Title Text",
    }
  }
  onClick={
    [MockFunction] {
      "calls": Array [
        Array [],
      ],
    }
  }
  selected={false}
>
  <li
    className="listing__item "
  >
    <a
      className="listing__link"
      onClick={
        [MockFunction] {
          "calls": Array [
            Array [],
          ],
        }
      }
    >
      Title Text
    </a>
  </li>
</ListingItem>
`;

exports[`Test Listing item component with selected render a listing item component 1`] = `
<ListingItem
  item={
    Object {
      "title": "Title Text",
    }
  }
  onClick={
    [MockFunction] {
      "calls": Array [
        Array [],
      ],
    }
  }
  selected={true}
>
  <li
    className="listing__item is-active"
  >
    <a
      className="listing__link"
      onClick={
        [MockFunction] {
          "calls": Array [
            Array [],
          ],
        }
      }
    >
      Title Text
    </a>
  </li>
</ListingItem>
`;
